@@ -5,25 +5,44 @@ plugins {
 //    id 'idea' // uncomment when using IntelliJ IDEA IDE
 }
 
+// Add compiler option to show more details for deprecations
+/*tasks.withType(JavaCompile).configureEach {
+    doFirst {
+        println "Compiler args: ${options.compilerArgs}"
+    }
+
+    options.compilerArgs.add("-Xlint:deprecation")
+    //options.compilerArgs.add("-Xlint:unchecked")
+}*/
+
 group = 'pl.otros.logviewer'
 version = '1.4.19-SNAPSHOT'
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+            '--add-opens', 'java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED'
+}
+
 
 repositories {
     mavenCentral()
     maven {
-        //Repo for cjwizard library
-        url "https://repos.lobosstudios.com/repository/java-dev/"
+        //Repo for cjwizard library. https://mvnrepository.com/ not working
+        url = "https://jitpack.io/"
     }
     flatDir {
         //embedded repo for custom libraries
-        dirs '../libs'
+        dirs = ['../libs']
     }
 }
 
 dependencies {
-    implementation 'com.github.cjwizard:cjwizard:1.0.9.1'
+    implementation 'com.github.cjwizard:cjwizard:cjwizard-1.0.9.1'
     implementation 'org.pushing-pixels:radiance-substance:1.0.2' //latest compatible version for Java 8
     implementation 'org.pushing-pixels:trident:1.2'
     implementation ':OtrosSingleInstance:1.3'
@@ -65,12 +84,10 @@ dependencies {
     implementation 'ch.qos.logback:logback-core:1.1.3'
     implementation 'ch.qos.logback:logback-classic:1.1.3'
     implementation 'org.unix4j:unix4j-command:0.3'
-    implementation 'org.scala-lang:scala-library:2.12.4'
-    implementation 'org.scala-lang.modules:scala-parser-combinators_2.12:1.1.0'
     implementation 'io.dropwizard.metrics:metrics-core:3.2.2'
     implementation 'com.alibaba:fastjson:1.2.76'
     testImplementation 'org.testng:testng:6.8.8'
-    testImplementation 'org.mockito:mockito-core:1.9.0'
+    testImplementation 'org.mockito:mockito-core:5.23.0'
     testImplementation 'org.assertj:assertj-core:3.6.2'
     testImplementation 'uk.co.datumedge:hamcrest-json:0.2'
     testImplementation 'org.awaitility:awaitility:2.0.0'
